# hackyplayer

./: .git-blame-ignore-revs  .gitignore  README.md  app.py  card build values.txt  config.py  default.nix  emf vid filtergraph.drawio  formvideo.py  pyproject.toml  requirements.txt  talks.json  tasks.py
hackyplayer/: __init__.py  app.py  config.py  formvideo.py  tasks.py
hackyplayer/resources/: sponsor slide.xcf
hackyplayer/static/css/: base.css  log.css
hackyplayer/static/js/: rvfc-polyfill.js  videolog.js
hackyplayer/static/json/: api.yaml
hackyplayer/templates/: log.html  tasks-table-body.html  tasks-table-head.html  watchfolders.html
nix/: sources.json
static/css/: base.css  log.css
static/js/: base.js  videolog.js
templates/: head.html  index.html  log-dash.html  log.html  sidebar.html  tasks-table-body.html  tasks-table-head.html  tasks.html  watchfolders.html
